// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag Snapshots All 1`] = `
<div
  className="sc-dlfnbm rCRqF className"
>
  <div
    className="sc-bdfBwQ kRkONB"
  >
    <img
      height="100"
      src="http://via.placeholder.com/150x150"
      width="100"
    />
  </div>
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots No props 1`] = `
<div
  className="sc-dlfnbm fySlwk"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots bottom 1`] = `
<div
  className="sc-dlfnbm droeeq"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots className 1`] = `
Array [
  <div
    className="sc-dlfnbm fySlwk className"
  >
    <div
      className="sc-bdfBwQ kRkONB"
    />
    <div
      className="sc-gsTCUz eYQmvp"
    />
  </div>,
  <p>
    Body
  </p>,
]
`;

exports[`Flag Snapshots flush 1`] = `
<div
  className="sc-dlfnbm cvCbAu"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots img 1`] = `
Array [
  <div
    className="sc-dlfnbm fySlwk"
  >
    <div
      className="sc-bdfBwQ kRkONB"
    >
      <img
        height="100"
        src="http://via.placeholder.com/150x150"
        width="100"
      />
    </div>
    <div
      className="sc-gsTCUz eYQmvp"
    />
  </div>,
  <p>
    Body
  </p>,
]
`;

exports[`Flag Snapshots large 1`] = `
<div
  className="sc-dlfnbm MkqSk"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots large reverse 1`] = `
<div
  className="sc-dlfnbm gwjFXG"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots responsive 1`] = `
<div
  className="sc-dlfnbm drFqBt"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots reverse 1`] = `
<div
  className="sc-dlfnbm djXuWM"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots small 1`] = `
<div
  className="sc-dlfnbm bogZMn"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots small reverse 1`] = `
<div
  className="sc-dlfnbm hnoChy"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots tiny 1`] = `
<div
  className="sc-dlfnbm cmNaya"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots tiny reverse 1`] = `
<div
  className="sc-dlfnbm feIBPa"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Flag Snapshots top 1`] = `
<div
  className="sc-dlfnbm edqWqp"
>
  <div
    className="sc-bdfBwQ kRkONB"
  />
  <div
    className="sc-gsTCUz eYQmvp"
  >
    <p>
      Body
    </p>
  </div>
</div>
`;
